experimenting with minified code

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div class="introduction">
 			<h1 class="introduction__content">
 				<span class="introduction__content-el introduction__content-el--name">Alborz Sabet</span>
-				<span class="introduction__content-el introduction__content-el--description">AI-Engineering</span>
+				<span class="introduction__content-el introduction__content-el--description">AI-Engineer</span>
 				<span class="introduction__content-el introduction__content-el--job">Professional</span>
 			</h1>
 			<svg class="introduction__arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0" y="0" viewBox="0 0 130 65" xml:space="preserve" enable-background="new 0 0 130 65"><g transform="translate(0.000000,65.000000) scale(0.100000,-0.100000)"><path d="M22.2 634c-50-35-40-47 293-349 174-157 323-285 333-285 24 0 635 552 647 585 8 23 6 30-14 46 -13 10-31 19-40 19s-57-37-107-83c-50-45-179-162-287-260l-197-179 -147 134c-319 289-433 388-446 388C50.2 650 34.2 643 22.2 634z"/></g></svg>
@@ -63,11 +63,12 @@
 					</div>
 					<p class="about__content-signature">Alborz Sabet</p>
 				</div>
-				<img class="about__visual" src="assets/img/about-visual.png" alt="Alborz Sabet">
+				<img class="about__visual" src="assets/img/new.png" alt="Alborz Sabet">
 			</div>
 		</section>
 		<!-- END SECTION: About -->
-		<!-- SECTION: App Design -->
+
+		<!--
 		<section class="app-design">
 			<div class="app-design__wrapper wrapper--large">
 				<div class="app-design__content blurb">
@@ -78,8 +79,7 @@
 			</div>
 			<figure class="app-design__visual"></figure>
 		</section>
-		<!-- END SECTION: App Design -->
-		<!-- SECTION: Web Design -->
+
 		<section class="web-design">
 			<div class="web-design__wrapper wrapper--small">
 				<div class="web-design__content blurb">
@@ -90,7 +90,9 @@
 			</div>
 			<figure class="web-design__visual"></figure>
 		</section>
-		<!-- END SECTION: Web Design -->
+		-->
+		<!-- SECTION: Work -->
+
 		<!-- SECTION: Work -->
 		<section id="work" class="work">
 			<h2 class="work__heading title">Latest Projects</h2>
@@ -99,37 +101,37 @@
 					<li class="work__list-el work__list-el--is-active">
 						<div class="work__content">
 							<div class="work__content-blurb blurb blurb--framed">
-								<h3 class="blurb__heading">Strategik INC<br>Web Design</h3>
-								<p class="blurb__copy">The awesome guys at Strategik INC were superb to work with because they knew their goals exactly.</p>
+								<h3 class="blurb__heading">AI video production<br>of combart sports footage</h3>
+								<p class="blurb__copy">Thesis project done for venture sport tech startup Jabbr.ai</p>
 							</div>
-							<a class="transform-link" href="#0">See full project</a>
+							<a class="transform-link" href="project-1.html">See full project</a>
 						</div>
 						<div class="work__visual">
-							<img src="assets/img/work-strategik.jpg" alt="Strategik INC">
+							<img src="assets/img/work-jabbr.jpg" alt="Strategik INC">
 						</div>
 					</li>
 					<li class="work__list-el">
 						<div class="work__content">
 							<div class="work__content-blurb blurb blurb--framed">
-								<h3 class="blurb__heading">Ēostre UI Kit<br>Web Design</h3>
-								<p class="blurb__copy">Ēostre UI Kit is made following the latest design trends with focus on usability and fast workflow.</p>
+								<h3 class="blurb__heading">CNN*<br>The Clothing Neural Network</h3>
+								<p class="blurb__copy">Training a neural network from scratch to classify articles of clothing. The network is trained on the Zalando Fashion-MNIST dataset.</p>
 							</div>
 							<a class="transform-link" href="#0">See full project</a>
 						</div>
 						<div class="work__visual">
-							<img src="assets/img/work-eostre.jpg" alt="Ēostre UI Kit">
+							<img src="assets/img/work-zalando.png" alt="Ēostre UI Kit">
 						</div>
 					</li>
 					<li class="work__list-el">
 						<div class="work__content">
 							<div class="work__content-blurb blurb blurb--framed">
-								<h3 class="blurb__heading">Go Outside<br>App Design</h3>
-								<p class="blurb__copy">Quick concept for a fictitious wildlife exploration app. Grab the PSD and start your own exploration.</p>
+								<h3 class="blurb__heading">DeepFake<br>Celeb Quiz</h3>
+								<p class="blurb__copy">Web app for guessing game where you and you friends can upload faces and guess what famous person you are on</p>
 							</div>
 							<a class="transform-link" href="#0">See full project</a>
 						</div>
 						<div class="work__visual">
-							<img src="assets/img/work-go-outside.jpg" alt="Go Outside App">
+							<img src="assets/img/work-DCQ.png" alt="Go Outside App">
 						</div>
 					</li>
 				</ul>
@@ -141,6 +143,7 @@
 			</div>
 		</section>
 		<!-- END SECTION: Work -->
+
 		<!-- SECTION: Blog -->
 		<section id="blog" class="blog">
 			<h2 class="blog__heading title">Blog Posts</h2>
