ver 3.0 Linked projects to github repo instead of writing html

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 					<li class="work__list-el work__list-el--is-active">
 						<div class="work__content">
 							<div class="work__content-blurb blurb blurb--framed">
-								<h3 class="blurb__heading">AI video production<br>of combart sports footage</h3>
-								<p class="blurb__copy">Thesis project done for venture sport tech startup Jabbr.ai</p>
+								<h3 class="blurb__heading">AI-automated<br>Video Production</h3>
+								<p class="blurb__copy">Software suite designed to streamline the production process of videos by automating tasks such as camera angle selection, highlights extraction, and overlay application. Thesis project done for venture sport tech startup Jabbr.ai.</p>
 							</div>
-							<a class="transform-link" href="project-1.html">See full project</a>
+							<a class="transform-link" href="https://github.com/javAlborz/BoxingVidProd">See full project</a>
 						</div>
 						<div class="work__visual">
-							<img src="assets/img/work-jabbr.jpg" alt="Strategik INC">
+							<img src="assets/img/work-jabbr2.png" alt="Strategik INC">
 						</div>
 					</li>
 					<li class="work__list-el">
@@ -108,22 +108,22 @@
 								<h3 class="blurb__heading">CNN*<br>The Clothing Neural Network</h3>
 								<p class="blurb__copy">Training a neural network from scratch to classify articles of clothing. The network is trained on the Zalando Fashion-MNIST dataset.</p>
 							</div>
-							<a class="transform-link" href="#0">See full project</a>
+							<a class="transform-link" href="https://github.com/javAlborz/ClothingNeuralNetwork">See full project</a>
 						</div>
 						<div class="work__visual">
-							<img src="assets/img/work-zalando.png" alt="Ēostre UI Kit">
+							<img src="assets/img/work-CNN.png" alt="Ēostre UI Kit">
 						</div>
 					</li>
 					<li class="work__list-el">
 						<div class="work__content">
 							<div class="work__content-blurb blurb blurb--framed">
-								<h3 class="blurb__heading">DeepFake<br>Celeb Quiz</h3>
-								<p class="blurb__copy">Web app for guessing game where you and you friends can upload faces and guess what famous person you are on</p>
+								<h3 class="blurb__heading">HuggingFace <br>Sentiment Analysis</h3>
+								<p class="blurb__copy">Full end-to-end MLops project for using a transformer-based model to classify user reviews of video games on steam as either positive or negative.</p>
 							</div>
-							<a class="transform-link" href="#0">See full project</a>
+							<a class="transform-link" href="https://github.com/javAlborz/hugging-face-on-steam">See full project</a>
 						</div>
 						<div class="work__visual">
-							<img src="assets/img/work-DCQ.png" alt="Go Outside App">
+							<img src="assets/img/work-steam.png" alt="Go Outside App">
 						</div>
 					</li>
 				</ul>
@@ -145,18 +145,18 @@
 						<img src="assets/img/blog-1-thumbnail.png" alt="Man viewing work plans">
 					</div>
 					<div class="blog__post-excerpt">
-						<h3>Object removal in Images</h3>
+						<h3>Removal of unwanted objects in Images: The use of semantic segmentation</h3>
 						<p>Sometimes I find myself having captured the perfect photography, only to wish for a small part of it to be edited out. While I'm not proficient in editing software like photoshop, I know of other approaches to solve the problem.</p>
 						<a class="transform-link" href="blog-1.html">Read full article</a>
 					</div>
 				</article>
 				<article class="blog__post">
 					<div class="blog__post-thumbnail">
-						<img src="assets/img/blog-post-3.jpg" alt="Man hanging pictures">
+						<img src="assets/img/blog-2-thumbnail.png" alt="Man hanging pictures">
 					</div>
 					<div class="blog__post-excerpt">
-						<h3>Why I use CCO images</h3>
-						<p>CCO images are awesome because you don't have to credit the author, and you can use them anywhere, anytime.</p>
+						<h3>The Emergence of AI Engineering: A Paradigm Shift in Tech</h3>
+						<p>Discover how the state of AI and software development is giving rise to AI Engineers, the new architects reshaping our digital landscape and marking a pivotal shift in the role of AI in technology.</p>
 						<a class="transform-link" href="#0">Read full article</a>
 					</div>
 				</article>
@@ -165,8 +165,8 @@
 						<img src="assets/img/blog-post-3.jpg" alt="Men working at a desk">
 					</div>
 					<div class="blog__post-excerpt">
-						<h3>Designing for IOT</h3>
-						<p>Internet of things is coming so quickly, we as designers will have to design UI and UX for more things in the future.</p>
+						<h3>Collection of resources for understanding and learning to build with AI</h3>
+						<p>The best free content.</p>
 						<a class="transform-link" href="#0">Read full article</a>
 					</div>
 				</article>
