--- a/blog-1.html
+++ b/blog-1.html
@@ -80,6 +80,21 @@
 						<li><strong>Target Object Isolation</strong>: The target object to be removed is isolated based on the segmentation map. This could be done automatically by the model if trained for specific object classes or manually by the user.</li>
 						<li><strong>Masking and Inpainting</strong>: The isolated object is then masked, and inpainting techniques are applied. Inpainting uses information from the surrounding pixels to fill in the gap left by the removed object, maintaining the coherence of the background.</li>
 						</ol>
+
+
+					<p></p>
+
+						<section class="image-comparison">
+							<div class="comparison-container">
+							  <div class="comparison-image">
+								<img src="assets/img/blog-images/blog-post-2.jpg" alt="Image before AI removal">
+							  </div>
+							  <div class="comparison-image">
+								<img src="assets/img/blog-images/blog-post-1.jpg" alt="Image after AI removal">
+							  </div>
+							</div>
+						  </section>
+	
 						
 						<h3>Inpainting Techniques</h3>
 
@@ -107,7 +122,7 @@
 
 
 					<section class="image-comparison">
-						<h2>Adobe Firefly - Object removel with generative fill</h2>
+						<h2>Adobe Firefly - Object removal with generative fill</h2>
 						<div class="comparison-container">
 						  <div class="comparison-image">
 							<h3>Before; ropes getting in the way of the frame</h3>
