--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 						<img src="assets/img/blog-1-thumbnail.png" alt="Man viewing work plans">
 					</div>
 					<div class="blog__post-excerpt">
-						<h3>Removal of unwanted objects in Images: The use of semantic segmentation</h3>
+						<h3>Removal of unwanted objects in images: The use of semantic segmentation</h3>
 						<p>Sometimes I find myself having captured the perfect photography, only to wish for a small part of it to be edited out. While I'm not proficient in editing software like photoshop, I know of other approaches to solve the problem.</p>
 						<a class="transform-link" href="blog-1.html">Read full article</a>
 					</div>
@@ -157,7 +157,7 @@
 					<div class="blog__post-excerpt">
 						<h3>The Emergence of AI Engineering: A Paradigm Shift in Tech</h3>
 						<p>Discover how the state of AI and software development is giving rise to AI Engineers, the new architects reshaping our digital landscape and marking a pivotal shift in the role of AI in technology.</p>
-						<a class="transform-link" href="#0">Read full article</a>
+						<a class="transform-link" href="blog-2.html">Read full article</a>
 					</div>
 				</article>
 				<article class="blog__post">
