update 3.0 Major update to UI Added blog 3

--- a/blog-1.html
+++ b/blog-1.html
@@ -22,8 +22,9 @@
 	<!-- SECTION: Navigation -->
 	<div id="top" class="navigation">
 		<div class="navigation__wrapper wrapper--large">
-			<a class="navigation__logo logo" href="#0">AS</a>
-			<nav class="navigation__container">
+			<a class="navigation__logo logo" href="index.html">
+				<img src="assets/img/new.png" alt="Logo" class="logo-img"> </a>
+						<nav class="navigation__container">
 				<ul class="navigation__list">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="index.html#work">Portfolio</a></li>
@@ -122,14 +123,14 @@
 
 
 					<section class="image-comparison">
-						<h2>Adobe Firefly - Object removal with generative fill</h2>
+						<h3>Adobe Firefly - Object removal with generative fill</h3>
 						<div class="comparison-container">
 						  <div class="comparison-image">
-							<h3>Before; ropes getting in the way of the frame</h3>
+							Before; ropes getting in the way of the frame
 							<img src="assets/img/blog-images/kamp-1-med.jpeg" alt="Image before AI removal">
 						  </div>
 						  <div class="comparison-image">
-							<h3>After; ropes removed from image frame</h3>
+							After; ropes removed from image frame
 							<img src="assets/img/blog-images/kamp-1-uten.jpg" alt="Image after AI removal">
 						  </div>
 						</div>
@@ -144,15 +145,15 @@
 					<section class="image-comparison">
 					<div class="comparison-container">
 						<div class="comparison-image">
-						<h3>Before</h3>
+						Before
 						<img src="assets/img/blog-images/kamp-2-med.jpeg" alt="Image before AI removal">
 						</div>
 						<div class="comparison-image">
-						<h3>Intermediate step</h3>
+						Intermediate step
 						<img src="assets/img/blog-images/kamp-2-litt.jpeg" alt="Image after AI removal">
 						</div>
 						<div class="comparison-image">
-						<h3>After</h3>
+						After
 						<img src="assets/img/blog-images/kamp-2-uten.jpeg" alt="Image after AI removal">
 						</div>
 					</div>
@@ -171,7 +172,7 @@
 	<footer class="footer">
 		<div class="footer__wrapper wrapper--large">
 			<p class="footer__copyright no-margin">&copy; 2023 Alborz Sabet</p>
-			<a class="footer__logo logo" href="#0">AS</a>
+			<a class="footer__logo logo" href="#0"> </a>
 			<a class="footer__arrow" href="#top">
 				<svg class="footer__arrow-el" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0" y="0" viewBox="0 0 130 65" xml:space="preserve" enable-background="new 0 0 130 65"><g transform="translate(0.000000,65.000000) scale(0.100000,-0.100000)"><path d="M315.4 365c-336-305-345-315-290-351 18-12 32-14 45-8 10 5 145 123 300 262l281 253 196-178c108-98 237-215 287-260 50-46 98-83 107-83s27 9 40 19c20 16 22 23 14 46 -12 33-623 585-647 585C638.4 650 489.4 522 315.4 365z"/></g></svg>
 			</a>
