--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<!-- SECTION: Navigation -->
 	<div id="top" class="navigation">
 		<div class="navigation__wrapper wrapper--large">
-			<a class="navigation__logo logo" href="#0">AS</a>
+			<a class="navigation__logo logo" href="#0"></a>
 			<nav class="navigation__container">
 				<ul class="navigation__list">
 					<li><a href="#0">Home</a></li>
@@ -47,7 +47,7 @@
 		<div class="introduction">
 			<h1 class="introduction__content">
 				<span class="introduction__content-el introduction__content-el--name">Alborz Sabet</span>
-				<span class="introduction__content-el introduction__content-el--description">AI-Engineer</span>
+				<span class="introduction__content-el introduction__content-el--description">AI-<p></p>Engineer</span>
 				<span class="introduction__content-el introduction__content-el--job">Professional</span>
 			</h1>
 			<svg class="introduction__arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0" y="0" viewBox="0 0 130 65" xml:space="preserve" enable-background="new 0 0 130 65"><g transform="translate(0.000000,65.000000) scale(0.100000,-0.100000)"><path d="M22.2 634c-50-35-40-47 293-349 174-157 323-285 333-285 24 0 635 552 647 585 8 23 6 30-14 46 -13 10-31 19-40 19s-57-37-107-83c-50-45-179-162-287-260l-197-179 -147 134c-319 289-433 388-446 388C50.2 650 34.2 643 22.2 634z"/></g></svg>
@@ -73,13 +73,50 @@
 			<div class="app-design__wrapper wrapper--large">
 				<div class="app-design__content blurb">
 					<h2 class="blurb__heading">My Journey</h2>
-					<p class="blurb__copy">Navigating the dynamic intersection of software engineering and applied AI, I've immersed myself in the evolving role of the AI Engineer. As we've moved into 2023, it's evident how the AI landscape has shifted; tasks that were once the domain of researchers are now accessible to AI professionals like myself.</p>
+					<p class="blurb__copy">Navigating the dynamic intersection of software engineering and applied AI, I've immersed myself in the evolving role of the AI Engineer. As we've moved into 2023, it's evident how the AI landscape has shifted; tasks that were once the domain of researchers are now accessible to AI professionals like myself.
+
+						My journey began during my BSc in Electrical Engineering, where I delved into Robotic Software Architecture and Control Systems Design, focusing on low-level programming and system integration.
+						I then transitioned into an MSc in Autonomous Systems Engineering at DTU, further broadening my expertise with a keen focus on computer vision, image analysis, and data mining.</p>
 										
 					<p class="blurb__copy">The AI ecosystem of today has allowed me to transition between tweaking models and building solutions using APIs, merging traditional programming techniques with the capabilities of modern AI tools. Whether it's evaluating powerful proprietary models or leveraging open-source options, I've positioned myself to harness their potential for practical applications. Integrating machine learning models with human-written code, I aim to produce efficient and impactful solutions. In this evolving landscape, my objective is not just to keep up but to be a proactive contributor, turning advancements into beneficial, tangible applications.</p>
 				  </div>
 			</div>
 			<figure class="app-design__visual"></figure>
 		</section>
+
+
+		<div class="timeline-horizontal-container">
+			<div class="timeline-horizontal">
+				<div class="timeline-item">
+					<div class="timeline-dot"></div>
+					<div class="timeline-content">
+						<h3>Bsc Electrical Engineering</h3>
+						<span>2016-2019</span>
+						<p>Norges teknisk-naturvitenskapelige universitet (NTNU)</p>
+					</div>
+				</div>
+	
+				<div class="timeline-item">
+					<div class="timeline-dot"></div>
+					<div class="timeline-content">
+						<h3>Msc Autonomous Systems Engineering</h3>
+						<span>2021-2023</span>
+						<p> DTU - Technical University of Denmark </p>
+					</div>
+				</div>
+
+				<div class="timeline-item">
+					<div class="timeline-dot"></div>
+					<div class="timeline-content">
+						<h3>Freelance Software Development</h3>
+						<span>2023-Current</span>
+						<p>  </p>
+					</div>
+				</div>
+	
+				<!-- Add more timeline items as needed -->
+			</div>
+		</div>
 
 		</section>
 		
@@ -105,7 +142,7 @@
 					<li class="work__list-el">
 						<div class="work__content">
 							<div class="work__content-blurb blurb blurb--framed">
-								<h3 class="blurb__heading">CNN*<br>The Clothing Neural Network</h3>
+								<h3 class="blurb__heading">CNN*<br>The Clothing Neural <p>Network</p></h3>
 								<p class="blurb__copy">Training a neural network from scratch to classify articles of clothing. The network is trained on the Zalando Fashion-MNIST dataset.</p>
 							</div>
 							<a class="transform-link" href="https://github.com/javAlborz/ClothingNeuralNetwork">See full project</a>
@@ -166,8 +203,8 @@
 					</div>
 					<div class="blog__post-excerpt">
 						<h3>Collection of resources for understanding and learning to build with AI</h3>
-						<p>The best free content.</p>
-						<a class="transform-link" href="#0">Read full article</a>
+						<p>A curated collection of guides, tutorials, and tools tailored for beginners and experts alike to de-mystify artificial intelligence, and integrate intelligent algorithms into your own software.</p>
+						<a class="transform-link" href="blog-3.html">Read full article</a>
 					</div>
 				</article>
 			</div>
@@ -201,7 +238,7 @@
 	<footer class="footer">
 		<div class="footer__wrapper wrapper--large">
 			<p class="footer__copyright no-margin">&copy; 2023 Alborz Sabet</p>
-			<a class="footer__logo logo" href="#0">AS</a>
+			<a class="footer__logo logo" href="#0"></a>
 			<a class="footer__arrow" href="#top">
 				<svg class="footer__arrow-el" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0" y="0" viewBox="0 0 130 65" xml:space="preserve" enable-background="new 0 0 130 65"><g transform="translate(0.000000,65.000000) scale(0.100000,-0.100000)"><path d="M315.4 365c-336-305-345-315-290-351 18-12 32-14 45-8 10 5 145 123 300 262l281 253 196-178c108-98 237-215 287-260 50-46 98-83 107-83s27 9 40 19c20 16 22 23 14 46 -12 33-623 585-647 585C638.4 650 489.4 522 315.4 365z"/></g></svg>
 			</a>
