Webiste 4.0 Expanded on blog 3 Improved SEO Added analytics

--- a/index.html
+++ b/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Personal</title>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RVMLRR4FXJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RVMLRR4FXJ');
+</script>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Free HTML5 Template plus Photoshop design">
-  <meta name="keywords" content="free html template, portfolio, html5, sass, jquery">
-  <meta name="author" content="Bucky Maler">
+  
+  <!-- Update the title to be more descriptive and include relevant keywords -->
+  <title>Alborz Sabet AI Engineer| Professional Portfolio</title>
+  
+  <!-- Updated meta description that accurately describes the page content -->
+  <meta name="description" content="Showcase of Alborz's professional portfolio, featuring innovative projects and blog">
+
+  <!-- Meta keywords are less relevant for SEO, but no harm in keeping them if they accurately represent the content -->
+  <meta name="keywords" content="professional portfolio">
+
+  <!-- Update the author meta tag if you are the main content creator -->
+  <meta name="author" content="Alborz Sabet">
+
+  <!-- Link to the main CSS file -->
   <link rel="stylesheet" href="assets/css/main.css">
+
+  <!-- Add a favicon for your site -->
+  <link rel="icon" type="image/png" href="assets/img/logo.png"/>
+
+  <!-- Open Graph tags for social media sharing -->
+  <meta property="og:title" content="Alborz Sabet AI Engineer | Professional Portfolio" />
+  <meta property="og:description" content="Showcase of Alborz Sabet's professional portfolio. Discover unique projects and skills in AI development." />
+  <meta property="og:image" content="assets/img/logo.png" />
+  <meta property="og:url" content="https://alborzsabet.com/" />
+  <meta property="og:type" content="website" />
+
 </head>
 <body>
 
