fixed scroll in functions js

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
 
 		<div class="timeline-horizontal-container">
+			
 			<div class="timeline-horizontal">
 				<div class="timeline-item">
 					<div class="timeline-dot"></div>
@@ -148,6 +149,10 @@
 				</div>
 	
 				<!-- Add more timeline items as needed -->
+
+
+			    <!-- Static arrow -->
+				<span class="scroll-indicator">→</span>
 			</div>
 		</div>
 
@@ -282,7 +287,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<!-- jQuery local fallback -->
 	<script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
-	<script src="assets/js/functions-min.js"></script>
+	<script src="assets/js/functions.js"></script>
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID and uncomment -->
 	<!--
 	<script>
