added cv download button to mobile/tablet

--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
 			<a class="navigation__logo logo" href="#0"></a>
 			<nav class="navigation__container">
 				<ul class="navigation__list">
-					<li><a href="#0">Home</a></li>
+					<li><a href="#index">Home</a></li>
 					<li><a href="#work">Portfolio</a></li>
 					<li><a href="#blog">Blog</a></li>
 					<li><a href="#contact">Contact</a></li>
+					<li class="navigation__cv"><a href="CV.pdf" download="CV_Alborz_Sabet.pdf">Download CV</a></li>
 				</ul>
 			</nav>
 			<!-- Updated button text and added href attribute to link to the CV PDF -->
