New tagline, smal blog fix, timeline fix for landscape

--- a/blog-3.html
+++ b/blog-3.html
@@ -113,17 +113,17 @@
 						</ul>
 						<h2>Essential Websites and Portals</h2>
 						<ul>
-							<li><a href="https://arxiv.org/">arXiv.org for Research Papers</a>: The primary source for the latest research papers in AI, offering a wealth of academic insights and developments.</li>
+							<li><a href="https://arxiv.org/">arXiv.org</a>: Source for the latest research papers in AI, offering a wealth of academic insights and developments.</li>
 							<li><a href="https://www.pytorch.com/">Pytorch's Official Website</a>: The official site for PyTorch, providing resources, documentation, and a community forum.</li>
 							<li><a href="https://playground.tensorflow.org/">Tensorflow's Neural Network Playground</a>: An interactive visualization of neural networks, great for understanding the basics of how these models learn and function.</li>
 						</ul>
 						<h2>Youtube Channels</h2>
 						<ul>
-							<li><a href="https://www.youtube.com/@statquest">Statquest with Josh Starmer</a>: Simplifying statistics and data science concepts through nursery "children book"-style visuals and nursery rhymes, making them easily understandable.</li>
+							<li><a href="https://www.youtube.com/@statquest">Statquest with Josh Starmer</a>: Simplifying statistics and data science concepts through nursery "children book"-style visuals and nursery rhymes.</li>
 							<li><a href="https://www.youtube.com/user/hugolarochelle">Hugo Larochelle</a>: Featuring a range of tutorials and lectures on machine learning and deep learning, presented by a leading AI researcher at Googles <i>DeepMind</i>.</li>
 						</ul>
 
-						<h2>Resources for Beginners in Math, Statistics, and Programming</h2>
+						<h2>Resources for beginners in Math, Statistics, and Programming</h2>
 						<p>If you're new to these foundational subjects, the following resources will help you build the necessary background to dive into AI:</p>
 						<ul>
 							<li><a href="https://www.khanacademy.org/math/statistics-probability/probability-library">Khan Academy: Probability and Statistics</a>: An interactive platform offering beginner-friendly lessons on probability and statistics, essential for understanding data in AI.</li>
