--- a/blog-3.html
+++ b/blog-3.html
@@ -100,7 +100,7 @@
 						
 						<h2>Books for Comprehensive Understanding</h2>
 						<ul>
-							<li><i>Deep Learning</i> by Ian Goodfellow, Yoshua Bengio, and Aaron Courville: This book is an in-depth exploration of deep learning, ideal for those serious about mastering this area of AI.</li>
+							<li><i>Deep Learning</i> by Ian Goodfellow, Yoshua Bengio, and Aaron Courville: This book is an in-depth exploration intended to help students and practitioners enter the field of machine learning in general and deep learning in particular.</li>
 							<li><i>Python Machine Learning</i> by Sebastian Raschka and Vahid Mirjalili: A practical guide that offers clear explanations and Python examples for machine learning.</li>
 							<li><i>Neural Networks from Scratch</i> by Harrison Kinsley (Sentdex): Guide for understanding neural networks. Each chapter accompanied with animated examples</li>
 						</ul>
